[tool.poetry]
name = "solana"
version = "0.25.0"
description = "Solana Python API"
authors = ["Michael Huang <michaelhly@gmail.com>", "Kevin Heavey <heaveykevin2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/michaelhly/solanapy"
documentation = "https://michaelhly.github.io/solana-py/"
keywords = ["solana", "blockchain", "web3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "solana", from = "src" },
    { include = "spl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
construct-typing = "^0.6.2"
httpx = "^0.27.0"
requests = "^2.31"
typing-extensions = ">=4.9.0"
cachetools = "^5.3.2"
types-cachetools = "^5.3.0.7"
jsonrpcclient = "^4.0.1"
websockets = "^12.0"
jsonrpcserver = "^5.0.7"
apischema = "^0.18.1"
based58 = "^0.1.0"
solders = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^24.2"
pytest = "^8.1.0"
pylint = "^3.1.0"
mypy = "^1.8.0"
pydocstyle = "^6.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-docker = "^3.1.1"
bump2version = "^1.0.1"
types-requests = "^2.31.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
asyncstdlib = "^3.12.0"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.5.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
